# test_globo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose-dev.yml  docker-compose.yml  index.html  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  release_notes.md
alembic/versions/: e28aed7e5fb2_create_videos_table.py
architecture/: index.html
backend/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
backend/.github/workflows/: deploy-to-eks.yml  python-tests.yml
backend/alembic/: env.py
backend/docs/: architecture.md  index.md
backend/src/presentation/: main.py
backend/tests/e2e/: test_create_video.py
frontend/: .dockerignore  Dockerfile  Dockerfile.deploy  README.md  package.json  pnpm-lock.yaml
frontend/.github/workflows/: deploy-to-eks.yml
k8s/: configmap.yaml  db-deployment.yaml  fastapi-deployment.yaml  ingress-service.yml  nextjs-deployment.yaml
nginx/: default.conf
search/: search_index.json
src/app/: layout.tsx  page.tsx
src/app/register/: layout.tsx  page.tsx  schema.ts
src/application/use_cases/: create.py  delete.py  delete_by_url.py  read_all.py
src/components/: theme-provider.tsx
src/components/footer/: index.tsx
src/components/page-container/: index.tsx
src/components/side-bar/: index.tsx
src/components/snack-bar/: index.tsx
src/components/videp-dialog/: index.tsx
src/domain/entities/: video.py
src/domain/enums/: error_messages.py  success_messages.py
src/domain/exceptions/: video_validation_error.py
src/domain/factories/: video.py
src/presentation/: main.py
tests/: conftest.py
tests/e2e/: test_create_video.py  test_delete_video.py  test_read_all.py
tests/unity/: test_video.py
(+111 files in other folders)
